fix: update table-cell placeholder to allow text wrapping
Changed the white-space property from nowrap to normal in the %table-cell placeholder to enable text wrapping

--- a/_sass/abstracts/_placeholders.scss
+++ b/_sass/abstracts/_placeholders.scss
@@ -41,7 +41,7 @@
 %table-cell {
   padding: 0.4rem 1rem;
   font-size: 95%;
-  white-space: nowrap;
+  white-space: normal;  // changed from nowrap to normal to allow text to wrap
 }
 
 %link-hover {
